--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "lucide-react": "^0.479.0",
     "next": "^15.2.4",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
