--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.479.0",
     "next": "^15.2.4",
     "next-cloudinary": "^6.16.0",
